--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,13 @@ h1 {
 }
 
 @media screen and (min-width: 575px) {
-    .preview {
+    .container {
+      width: 90%;
       display: block;
-      margin: 2% auto;
+      margin: 0 auto;
+     }
+    .preview {
+      margin: 2%;
       width: 40%;
       height: 200px;
       float: left;
