--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ h1 {
       margin: 0 auto;
      }
     .preview {
-      margin: 2%;
+      margin: 2% auto;
       width: 40%;
       height: 200px;
       float: left;
@@ -74,9 +74,15 @@ h1 {
   }
 
 @media screen and (min-width: 991px) {
+    .container {
+      width: 90%;
+      display: block;
+      margin: 0 auto;
+    }
     .preview {
       background-position: left;
-      width: 15%;
+      margin: 0 auto;
+      width: 23%;
       height: 170px;
       float: left;
     }
