--- a/css/style.css
+++ b/css/style.css
@@ -75,14 +75,16 @@ h1 {
 
 @media screen and (min-width: 991px) {
     .container {
-      width: 90%;
+      width: 70%;
       display: block;
       margin: 0 auto;
+      border: solid black;
     }
     .preview {
       background-position: left;
-      margin: 0 auto;
-      width: 23%;
+      margin-right: 1%;
+      margin-left: 1%;
+      width: 22.9%;
       height: 170px;
       float: left;
     }
