--- a/css/style.css
+++ b/css/style.css
@@ -61,13 +61,15 @@ h1 {
 
 @media screen and (min-width: 575px) {
     .container {
-      width: 90%;
+      width: 70%;
       display: block;
       margin: 0 auto;
      }
     .preview {
-      margin: 2% auto;
-      width: 40%;
+      margin-bottom: 2%;
+      margin-left: 1%;
+      margin-right: 1%;
+      width: 48%;
       height: 200px;
       float: left;
     }
@@ -78,13 +80,12 @@ h1 {
       width: 70%;
       display: block;
       margin: 0 auto;
-      border: solid black;
     }
     .preview {
       background-position: left;
       margin-right: 1%;
       margin-left: 1%;
-      width: 22.9%;
+      width: 22.96%;
       height: 170px;
       float: left;
     }
