--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ h1 {
   float: left;
   width: 100%;
   display: block;
-  margin: 0 auto;
+  margin-bottom: 2%;
   height: 290px;
   /* border: .02px solid blue; */
 }
